--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["ksetherg <ksetherg@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+ray = "^1.3.0"
+numpy = "^1.20.2"
+pandas = "^1.2.4"
+scikit-learn = "^0.24.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
